# BEATRIS-CA

./: CMakeLists.txt  howtocmake.txt  keyconfig.json
build-ucrt/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
include/: ai_common.hpp  ai_evaluate.hpp  ai_path.hpp  ai_runner.cpp  ai_search.hpp  block.hpp  board.hpp  boardex.hpp  draw.hpp  fallmino.hpp  findfinalattachableminostates.hpp  masks.hpp  timer.h  utils.hpp
platform/win/: PPT1Mem.cpp  PPT1Mem.h  PPTDef.h  input.hpp  使い方.txt
src/: main.cpp
tests/: CMakeLists.txt  test_board.cpp  test_utils.hpp
tests/build-ucrt/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
